<resources>
    <string name="app_name">Bar Boot Camp</string>
    <string name="app_logo">Logo</string>
    <string name="welcomelogo">Welcome</string>
    <string name="user_name">Please Enter Your Name</string>
    <string name="start_app">start logo</string>
    <string name="hi_text">Hi</string>
    <string name="userName">Name</string>
    <string name="choose">Are you here for Entertainment or to become a Professional Bartender?</string>
    <string name="fun_btn">Learn for Fun!</string>
    <string name="learn_btn">Bartender Course</string>
    <string name="topic_name">Topic Name</string>
    <string name="topic_title">Topic Title</string>
    <string name="topic_level">Topic Level</string>
    <string name="cocktail_name">Cocktail Name</string>
    <string name="cocktail_level">Cocktail Type</string>
    <string name="quiz_question">Question </string>
    <string name="quiz_questionID">no</string>
    <string name="quiz_answer">sample answer</string>
    <string name="sumbit_btn">Submit</string>
    <string name="cancel_btn">Cancel</string>
    <string name="topiclvl_label">Topic Level:</string>
    <string name="lesson1_lb">Lesson 1: </string>
    <string name="lesson2_lb">Lesson 2: </string>
    <string name="lesson3_lb">Lesson 3: </string>
    <string name="quiz_btn">QUIZ</string>
    <string name="Search_cocktail">Search Cocktails by First Letter</string>
    <string name="ingredient_lab">Ingredients</string>
    <string name="ingredient_sample">Ingredient</string>
    <string name="measure_sample">Measure</string>
    <string name="glass_lab">Glass: </string>
    <string name="glass">Sample Glass</string>
    <string name="Instructions_lab">Instructions</string>
    <string name="Instruction_sample">Sample Instructions</string>
    <string name="warning_sign">You have to be over 18 to enter this App</string>
    <string name="favourite_lab">Favourite Drinks</string>
    <string name="progress_lab">Course Progress</string>
    <string name="result_lab">Quiz Results</string>
    <string name="topic1">Beer and Wine</string>
    <string name="topic2">Vodka, Gin and Whiskey</string>
    <string name="topic3">Rum, Tequila and Other Festive Spirits</string>
    <string name="topic4">Classic Cocktails</string>
    <string name="topic5">Cocktail Equipment and Garnishes</string>
    <string name="topic6">Cocktail Making Techniques</string>
    <string name="badge_lab">Badges</string>
</resources>
