<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/userTypePage_constraintLay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.ChooseUserTypeActivity">

    <TextView
        android:id="@+id/userTypePage_hiText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="24dp"
        android:text="@string/hi_text"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userTypePage_userNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/userName"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/userTypePage_hiText"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userTypePage_questionText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/choose"
        android:textColor="@color/goldYellow"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userTypePage_userNameText" />

    <Button
        android:id="@+id/userTypePage_funBtn"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:layout_marginTop="40dp"
        android:background="@color/colorAccent"
        android:onClick="setFunBtnAction"
        android:text="@string/fun_btn"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userTypePage_questionText" />

    <Button
        android:id="@+id/userTypePage_learnBtn"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:layout_marginTop="76dp"
        android:background="@color/colorAccent"
        android:gravity="center_horizontal|center_vertical"
        android:onClick="setBartenderBtnAction"
        android:text="@string/learn_btn"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userTypePage_funBtn" />

    <ImageView
        android:id="@+id/userTypePage_image"
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/app_logo"
        android:scaleType="fitCenter"
        android:tint="@color/goldYellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userTypePage_learnBtn"
        tools:srcCompat="@drawable/ic_cocktail_glass_with_lemon_slice_svgrepo_com" />

</androidx.constraintlayout.widget.ConstraintLayout>