<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/quiz_cl"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/quiz_question"
        android:textColor="@color/Black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/quiz_qnvm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="24dp"
        android:text="@string/quiz_questionID"
        android:textColor="@color/Black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/quiz_question"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/quiz_question"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <RadioGroup
        android:id="@+id/quiz_radioGroup"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quiz_question">

        <RadioButton
            android:id="@+id/quiz_answer1_rbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz_answer" />

        <RadioButton
            android:id="@+id/quiz_answer2_rbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz_answer" />

        <RadioButton
            android:id="@+id/quiz_answer3_rbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz_answer" />

        <RadioButton
            android:id="@+id/quiz_answer4_rbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz_answer"
            app:layout_constraintStart_toStartOf="parent" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>